Fix theme on phone view

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       property="og:url"
       content="https://davidzamanian.github.io/sirina"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=20260224192232" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=20260224192232" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=20260224192232" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#050505" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#050505" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=20260224193727" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=20260224193727" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=20260224193727" />
     <title>Sirina Chat</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
